--- a/website/newsletter/193/index.mdx
+++ b/website/newsletter/193/index.mdx
@@ -3,16 +3,15 @@ slug: /193
 title: "This Week In React #193: State of React, Server Functions, next/form, useId, Astro, Meteor, Gluestack, React-Aria, Turbopack, Airbnb, Apollo, DRY, IDX, Bootsplash, Flash Calendar, CSS, ES, Poku..."
 authors: [slorber, bndkt]
 date: 07-24-2024
-unlisted: true
 ---
 
 Hi everyone!
 
 This week the State of React survey results are finally out, and they are full of interesting insights.
 
-I found some great articles on abstractions in React, as well as feedback and case studies from various companies.
+I found some great articles on abstractions in React, as well as feedback and case studies from various React and React Native companies.
 
-Astro has released Server Islands, and it looks like a pretty simple but compelling solution to rival with Next.js Partial Prerendering. There's also the Renaissance of Meteor to look forward to, React Aria releases, the new Gluestack-UI v2 for Universal React Native.
+Astro has released Server Islands, and it looks like a pretty simple but compelling solution to rival with Next.js Partial Prerendering, on which Vercel also published a great article. There's also the Renaissance of Meteor to look forward to, React Aria releases, and a v2 of Gluestack-UI for Universal React Native devs.
 
 Do you like TypeScript and web dev tooling in general? Check out [Squiggle Conf](https://2024.squiggleconf.com/?utm_source=thisweekinreact) (🇺🇸 Boston - 03 & 04 October), offering us a 10% discount with code “TWIR”. Great speakers have already been announced!
 
@@ -121,13 +120,13 @@ Gluestack-UI offers universal components and patterns for React, Next.js & React
 ---
 
 - 💸 [Sentry - Application monitoring tools with support for React Native, Expo, Hermes and every other technology (except some of them). Considered "not bad" by 4 million developers. Get Sentry Free](https://sentry.io/welcome/?utm_medium=email&utm_source=THIS_WEEK_IN_REACT&utm_campaign=TWIR_july_2024&utm_content=rn-quick-link)
-- 🐦 [Google IDX (web-based IDE) now supports React Native / Expo](https://x.com/kirupa/status/1813690012720120225)
+- 🐦 [New experimental expo-doctor feature validates project dependencies against reactnative.directory metadata](https://x.com/notbrent/status/1814016564452315374): Lets you know when you’re using libraries that are not maintained any longer or don’t support the New Arch.
 - 🐦 [New updates from Expo documentation](https://x.com/amanhimself/status/1815460518515118266): SSO, Metro bundler aliases, and expo-drizzle-studio-plugin
+- 🐦 [Google IDX (web-based IDE) now supports React Native / Expo](https://x.com/kirupa/status/1813690012720120225)
 - 🐦 [Learn how to perform link redirection & utilization with 3rd party deep-links with +native-intent](https://x.com/expo/status/1814274913030520874)
 - 📜 [Build fast, flexible calendars with Flash Calendar](https://expo.dev/blog/build-fast-flexible-calendars-in-react-native-with-flash-calendar): Building date pickers is hard, making them performant is even harder - Flash Calendar solves this and is quite customizable.
 - 📜 [Building a multi-platform on-call mobile app](https://incident.io/hubs/building-on-call/building-a-multi-platform-on-call-mobile-app): Case study from incident.io
 - 📜 [Driving Innovation: MyWheels' Journey from RNC CLI to Expo](https://expo.dev/blog/from-rnc-cli-to-expo)
-- 📦 [Experimental expo-doctor feature that validates project dependencies against reactnative.directory metadata](https://x.com/notbrent/status/1814016564452315374): Lets you know when you’re using libraries that are not maintained any longer or don’t support the New Arch.
 - 📦 [Bootsplash 6.0 - Now with Expo Config Plugin](https://github.com/zoontek/react-native-bootsplash/releases/tag/6.0.0)
 - 📦 [React Native 0.75 rc.6](https://github.com/facebook/react-native/releases/tag/v0.75.0-rc.6)
 - 📦 [TinyBase Example for React Native](https://github.com/expo/examples/tree/master/with-tinybase): Great starter for building local-first apps.
