--- a/website/newsletter/193/index.mdx
+++ b/website/newsletter/193/index.mdx
@@ -54,6 +54,7 @@ The very first State of React survey results are finally online. The data was co
 - No clear React framework winner. Next.js is the most popular but has slightly lower retention than Astro and Remix
 - React renderer usage shows that React is not only React-DOM. More than 30% use React Native, and 9% use React-Three-Fiber.
 - Only 7% have ever used [my favorite underrated hook useSyncExternalStore](https://thisweekinreact.com/articles/useSyncExternalStore-the-underrated-react-api)
+- This Week In React is the 5th most popular resource in the "Blogs & Magazines" category (❤️️ thanks!)
 
 The next State of React 2024 survey is [planned for September 2024](https://dev.to/sachagreif/planning-out-the-2024-state-of-surveys-4lb9) and now is the time to get involved in the survey design.
 
