--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/193/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/193/index.mdx
@@ -62,21 +62,21 @@ La prochaine enquête State of React 2024 est [prévue pour septembre 2024](http
 
 - 💸 [Reactile – a new approach to React-based web apps. Create your own views. Let it handle your windows and widgets in a single browser tab](https://www.reactile.net/?utm_source=reactnewsletter)
 - 👀 [Next.js PR - next/form](https://github.com/vercel/next.js/pull/68102)
-- 🗓️ [React-Brussels](https://www.react.brussels/?utm_source=thisweekinreact) - 🇧🇪 Brussels - 18 October - Some speakers have already been revealed ! Check out now, and apply 10% discount with code “TWIR”.
-- 📜 [Data Fetching with Server Actions in Next.js](https://www.robinwieruch.de/next-server-actions-fetch-data/): You can use Server Actions to fetch client data using React-Query. There are limitations to consider though: they use POST requests and run sequentially. FYI a "use server" function called outside a transition is not a Server Action, but a [Server Function](https://x.com/sebastienlorber/status/1816096442492051672).
-- 📜 [Use useId() Instead Of Hand-Making IDs](https://reacttraining.com/blog/use-useid-instead-of-hand-making-ids): IDs are useful for accessibility, but you’d rather avoid creating them manually if you want to mount a component twice, or have good support for React hydration. To access DOM elements, `useRef` is enough.
-- 📜 [Do not pass DTOs to UI components](https://darios.blog/posts/do-not-pass-dtos-to-ui-components): Explain why you’d rather design component props shapes independently, instead of blindly using your backend payloads as props.
-- 📜 [DRY – the common source of bad abstractions](https://swizec.com/blog/dry-the-common-source-of-bad-abstractions/): Greatly illustrates how React devs could end up creating the wrong abstractions. React UI libraries learned over the years to not over-abstract and give you great flexibility through composition.
-- 📜 [Turbopack updates: Moving homes](https://vercel.com/blog/turbopack-moving-homes): The Turbopack bundler is moving to the Next.js repository. Co-location will help the team iterate faster on production builds (currently 92%-ready!). Turbopack will remain a framework-agnostic standalone bundler: once ready, it will be moved back to a separate repository.
-- 📜 [Vercel - How to choose the best rendering strategy for your app](https://vercel.com/blog/how-to-choose-the-best-rendering-strategy-for-your-app): Great overview of all the rendering strategies (SSG, SSR, ISR, CSR), their tradeoffs, and best practices. Using Partial Pre-Rendering builds on top of the strategies above. Using Next.js with Server Components and Suspense boundaries makes your app future-proof for selecting the best rendering strategy for each component.
-- 📜 [How Airbnb Smoothly Upgrades React](https://medium.com/airbnb-engineering/how-airbnb-smoothly-upgrades-react-b1d772a565fd): Airbnb recently upgraded their frontends from React 16 to React 18. Using a “React Upgrade System”, relying on shared infrastructure code and an incremental migration and rollout strategy.
-- 📜 [Fine-grained Markdown](https://v1.codehike.org/blog/fine-grained-markdown): Interactive article from the creator of Code Hike (based on MDX) showing how we can decorate Markdown and extend it in a typesafe way to make it a richer medium.
+- 🗓️ [React-Brussels](https://www.react.brussels/?utm_source=thisweekinreact) - 🇧🇪 Bruxelles - 18 octobre - Certains orateurs ont déjà été révélés ! Réservez dès maintenant et bénéficiez d'une réduction de 10% avec le code « TWIR ».
+- 📜 [Data Fetching with Server Actions in Next.js](https://www.robinwieruch.de/next-server-actions-fetch-data/) : Vous pouvez utiliser les Server Actions pour récupérer les données du client à l'aide de React-Query. Il y a cependant des limitations à prendre en compte : elles utilisent des requêtes POST et s'exécutent de manière séquentielle. Pour information, une fonction « use server » appelée en dehors d'une transition n'est pas une Server Action, mais une [Server Function](https://x.com/sebastienlorber/status/1816096442492051672).
+- 📜 [Use useId() Instead Of Hand-Making IDs](https://reacttraining.com/blog/use-useid-instead-of-hand-making-ids) : Les ID sont utiles pour l'accessibilité, mais vous préféreriez éviter de les créer manuellement si vous voulez monter un composant deux fois, ou si vous voulez avoir un bon support pour l'hydratation de React. Pour accéder aux éléments du DOM, `useRef` est suffisant.
+- 📜 [Do not pass DTOs to UI components](https://darios.blog/posts/do-not-pass-dtos-to-ui-components) : Pourquoi est-il préférable de concevoir des structures de props de composants de manière indépendante, plutôt que d'utiliser aveuglément les données utiles de votre backend en tant que props ?
+- 📜 [DRY – the common source of bad abstractions](https://swizec.com/blog/dry-the-common-source-of-bad-abstractions/) : Cela illustre parfaitement comment les développeurs React peuvent finir par créer les mauvaises abstractions. Les bibliothèques React UI ont appris au fil des ans à ne pas trop abstraire et à vous donner une grande flexibilité grâce à la composition.
+- 📜 [Turbopack updates: Moving homes](https://vercel.com/blog/turbopack-moving-homes) : Le bundler Turbopack est déplacé vers le dépôt Next.js. La co-localisation aidera l'équipe à itérer plus rapidement sur les builds de production (actuellement prêts à 92% !). Turbopack restera un bundler autonome agnostique au framework : une fois prêt, il sera replacé dans un dépôt séparé.
+- 📜 [Vercel - How to choose the best rendering strategy for your app](https://vercel.com/blog/how-to-choose-the-best-rendering-strategy-for-your-app) : Excellente vue d'ensemble de toutes les stratégies de rendu (SSG, SSR, ISR, CSR), de leurs avantages et des meilleures pratiques. L'utilisation du pré-rendu partiel s'appuie sur les stratégies ci-dessus. L'utilisation de Next.js avec les Server Components et les Suspense boundaries permet à votre application d'être à l'épreuve du temps en sélectionnant la meilleure stratégie de rendu pour chaque composant.
+- 📜 [How Airbnb Smoothly Upgrades React](https://medium.com/airbnb-engineering/how-airbnb-smoothly-upgrades-react-b1d772a565fd) : Airbnb a récemment mis à jour ses frontends de React 16 à React 18. En utilisant un « système de mise à niveau React », s'appuyant sur un code d'infrastructure partagé et une stratégie de migration et de déploiement incrémentale.
+- 📜 [Fine-grained Markdown](https://v1.codehike.org/blog/fine-grained-markdown) : Article interactif du créateur de Code Hike (basé sur MDX) montrant comment nous pouvons décorer Markdown et l'étendre de manière sûre pour en faire un média plus riche.
 - 📜 [Data fetching in useEffect vs Remix loader](https://www.jacobparis.com/content/use-effect-fetching)
 - 📜 [Integrating Next.js with New Relic](https://www.thisdot.co/blog/integrating-next-js-with-new-relic)
 - 📜 [Clean(er) React Architecture (Part 8) - How Does React-Query Fit Into The Picture?](https://profy.dev/article/react-architecture-tanstack-query)
 - 📜 [Zoom - Why we chose T3 stack to build our reference apps on Web](https://developers.zoom.us/blog/why-we-chose-to-build-with-the-t3-stack/)
-- 📦 [Astro 4.12 - Server Islands](https://astro.build/blog/astro-4120/): Astro released a great new Server Islands feature that renders a placeholder on the server, and replaces it independently with dynamic content afterward, enabling you to render the rest of your site statically. This is an alternative approach to the Next.js model, planning to solve this with React Server Components + Suspense + Partial Pre-Rendering. Their demo is a rebranded fork of the Next.js PPR one and outperforms it!
-- 📦 [Meteor.js 3.0](https://forums.meteor.com/t/its-official-meteor-3-0-official-release-is-out/61860): Meteor just released a new major version that drops the legacy Fibers coroutines in favor of async/await, upgrade to Node 20 and integrates Express. This new version claims to be [Renaissance of Meteor.js](http://meteor.js), with launch events starting on July 29th. I’ve never used Meteor, and curious to know what place it will take alongside the modern React frameworks we have today.
+- 📦 [Astro 4.12 - Server Islands](https://astro.build/blog/astro-4120/) : Astro a sorti une nouvelle fonctionnalité Server Islands qui rend un placeholder sur le serveur, et le remplace indépendamment avec du contenu dynamique par la suite, vous permettant de rendre le reste de votre site de manière statique. Il s'agit d'une approche alternative au modèle Next.js, qui prévoit de résoudre ce problème avec React Server Components + Suspense + Partial Pre-Rendering. Leur démo est un fork rebaptisé de celle de Next.js PPR et la surpasse !
+- 📦 [Meteor.js 3.0](https://forums.meteor.com/t/its-official-meteor-3-0-official-release-is-out/61860) : Meteor vient de sortir une nouvelle version majeure qui abandonne les anciennes coroutines Fibers au profit d'async/await, passe à Node 20 et intègre Express. Cette nouvelle version prétend être la [Renaissance de Meteor.js](http://meteor.js), avec des événements de lancement à partir du 29 juillet. Je n'ai jamais utilisé Meteor, et je suis curieux de savoir quelle place il prendra aux côtés des frameworks React modernes que nous avons aujourd'hui.
 - 📦 [React Aria July 22 release - React 19 ready, virtualization improvements, toast focus management improvements, Color Picker RC](https://react-spectrum.adobe.com/releases/2024-07-22.html)
 - 📦 [Apollo Client 3.11 - Subscription improvements, React 19 + compiler support, new testing library, new Devtools options](https://www.apollographql.com/blog/whats-new-in-apollo-client-3-11)
 - 📦 [eslint-plugin-use-server - Disallows top level "use server"](https://github.com/c-ehrlich/eslint-plugin-use-server)
@@ -116,21 +116,21 @@ Cette section est rédigée par [Benedikt](https://twitter.com/bndkt).
 
 **[Gluestack-UI v2 - Universal copy/paste components for Expo/Next](https://gluestack.io/)**
 
-Gluestack-UI offers universal components and patterns for React, Next.js & React Native to copy & paste. The recently released v2 is a major update that focuses on performance optimization, reduced dependencies, and RSC compatibility. It’s based on Tailwind CSS (for web) and NativeWind (for native). Due to its copy & paste approach, upgrading is not as easy as bumping a dependency, but they have a straightforward tutorial and a code mod to help with the upgrade. To give you a glimpse of v2, they even released a little 🐦 [trailer on X](https://x.com/gluestack/status/1813895494005112859).
+Gluestack-UI offre des composants et des patterns universels pour React, Next.js & React Native à copier et coller. La v2 récemment publiée est une mise à jour majeure qui se concentre sur l'optimisation des performances, la réduction des dépendances et la compatibilité avec RSC. Elle est basée sur Tailwind CSS (pour le web) et NativeWind (pour le natif). En raison de son approche copier-coller, la mise à jour n'est pas aussi simple que de changer une dépendance, mais il y a un tutoriel simple et un code mod pour aider à la mise à jour. Pour vous donner un aperçu de la v2, ils ont même publié une petite 🐦 [bande-annonce sur X](https://x.com/gluestack/status/1813895494005112859).
 
 ---
 
 - 💸 [Sentry - Application monitoring tools with support for React Native, Expo, Hermes and every other technology (except some of them). Considered "not bad" by 4 million developers. Get Sentry Free](https://sentry.io/welcome/?utm_medium=email&utm_source=THIS_WEEK_IN_REACT&utm_campaign=TWIR_july_2024&utm_content=rn-quick-link)
-- 🐦 [New experimental expo-doctor feature validates project dependencies against reactnative.directory metadata](https://x.com/notbrent/status/1814016564452315374): Lets you know when you’re using libraries that are not maintained any longer or don’t support the New Arch.
-- 🐦 [New updates from Expo documentation](https://x.com/amanhimself/status/1815460518515118266): SSO, Metro bundler aliases, and expo-drizzle-studio-plugin
+- 🐦 [New experimental expo-doctor feature validates project dependencies against reactnative.directory metadata](https://x.com/notbrent/status/1814016564452315374) : Vous indique que vous utilisez des bibliothèques qui ne sont plus maintenues ou qui ne supportent pas la New Arch.
+- 🐦 [New updates from Expo documentation](https://x.com/amanhimself/status/1815460518515118266) : SSO, alias Metro bundler et expo-drizzle-studio-plugin
 - 🐦 [Google IDX (web-based IDE) now supports React Native / Expo](https://x.com/kirupa/status/1813690012720120225)
 - 🐦 [Learn how to perform link redirection & utilization with 3rd party deep-links with +native-intent](https://x.com/expo/status/1814274913030520874)
-- 📜 [Build fast, flexible calendars with Flash Calendar](https://expo.dev/blog/build-fast-flexible-calendars-in-react-native-with-flash-calendar): Building date pickers is hard, making them performant is even harder - Flash Calendar solves this and is quite customizable.
-- 📜 [Building a multi-platform on-call mobile app](https://incident.io/hubs/building-on-call/building-a-multi-platform-on-call-mobile-app): Case study from incident.io
+- 📜 [Build fast, flexible calendars with Flash Calendar](https://expo.dev/blog/build-fast-flexible-calendars-in-react-native-with-flash-calendar) : Construire des sélecteurs de date est difficile, les rendre performants l'est encore plus - Flash Calendar résout ce problème et est tout à fait personnalisable.
+- 📜 [Building a multi-platform on-call mobile app](https://incident.io/hubs/building-on-call/building-a-multi-platform-on-call-mobile-app) : Étude de cas de incident.io
 - 📜 [Driving Innovation: MyWheels' Journey from RNC CLI to Expo](https://expo.dev/blog/from-rnc-cli-to-expo)
 - 📦 [Bootsplash 6.0 - Now with Expo Config Plugin](https://github.com/zoontek/react-native-bootsplash/releases/tag/6.0.0)
 - 📦 [React Native 0.75 rc.6](https://github.com/facebook/react-native/releases/tag/v0.75.0-rc.6)
-- 📦 [TinyBase Example for React Native](https://github.com/expo/examples/tree/master/with-tinybase): Great starter for building local-first apps.
+- 📦 [TinyBase Example for React Native](https://github.com/expo/examples/tree/master/with-tinybase) : Un excellent point de départ pour la création d'applications locales.
 - 🎥 [Harry Tormey - Migrating Coinbase's 56 Million Users to React Native: Key Lessons and Takeaways](https://stepchange.work/blog/migrating-coinbases-56-million-users-to-react-native-key-lessons-and-takeaways)
 - 🎥 [Simon Grimm - 10 Expo Router Tips You Need to Know](https://www.youtube.com/watch?v=1hD1ZClxpfc)
 - 🎥 [Daniel Friyia - Introduction to Game Development with Expo, Skia and Reanimated](https://www.youtube.com/watch?v=Af2-OT9mE14)
