--- a/website/src/pages/conferences.mdx
+++ b/website/src/pages/conferences.mdx
@@ -56,8 +56,7 @@ Here's how we generally execute this kind of media partnership.
 ### What we do
 
 - We mention once the conference in the newsletter intro ([example](/newsletter/159))
-- We mention it 4 times ([example](/newsletter/159#react)) at key events (early birds, CFP, speakers announcement...)
-- We include the YouTube playlist of your event
+- We mention it 3 times ([example](/newsletter/159#react)) at key events (early birds, CFP, speakers announcement...)
 
 ### What you do
 
@@ -97,11 +96,9 @@ Here are the details of our conference:
 
 We would like to promote our conference at those key events:
 - newsletter intro mention - dd/MM/yyyy - Conf scheduled, early birds
-- newsletter mention 1 - dd/MM/yyyy - CFP is open
-- newsletter mention 2 - dd/MM/yyyy - CFP is closing soon
-- newsletter mention 3 - dd/MM/yyyy - Speakers announcement
-- newsletter mention 4 - dd/MM/yyyy - Last call, late birds
-- post-conf mention - dd/MM/yyyy - Conference summary post, YouTube playlist available
+- newsletter mention 1 - dd/MM/yyyy - CFP is open / closing soon
+- newsletter mention 2 - dd/MM/yyyy - Speakers announcement
+- newsletter mention 3 - dd/MM/yyyy - Last call, late birds
 
 We agree to:
 - print and distribute your flyer in our swag bag
