--- a/website/src/pages/conferences.mdx
+++ b/website/src/pages/conferences.mdx
@@ -96,9 +96,11 @@ Here are the details of our conference:
 
 We would like to promote our conference at those key events:
 - newsletter intro mention - dd/MM/yyyy - Conf scheduled, early birds
-- newsletter mention 1 - dd/MM/yyyy - CFP is open / closing soon
-- newsletter mention 2 - dd/MM/yyyy - Speakers announcement
+- newsletter mention 1 - dd/MM/yyyy - CFP is opening / closing soon
+- newsletter mention 2 - dd/MM/yyyy - Speakers announcement + 3 representative headliners
 - newsletter mention 3 - dd/MM/yyyy - Last call, late birds
+
+(these key events are examples, and not strict requirements: feel free to suggest whatever helps you get conversions)
 
 We agree to:
 - print and distribute your flyer in our swag bag
