--- a/website/newsletter/194/index.mdx
+++ b/website/newsletter/194/index.mdx
@@ -8,7 +8,7 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+Check our partner conf [React Africa](https://react-africa.com/?utm_source=thisweekinreact.com) (🇲🇦 Casablanca - November 29th). Get a 10% discount with code “TWIR”. It's the very first international React conf in Africa! Great speakers have already been announced.
 
 <!-- truncate -->
 
@@ -30,7 +30,41 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![React Conf 2024 Talks](/emails/issues/194/reactconf.jpg)](https://conf.react.dev/talks)
+
+🎥 **[React Conf 2024 Talks](https://conf.react.dev/talks)**
+
+The React Conf 2024 talks are finally online, and you can also take a look at the [photos](https://conf.react.dev/photos) and [highlights video](https://www.youtube.com/watch?v=p6auCiVoa3c).
+
+We haven’t had any huge React announcement this week, so I thought it would be cool to remind you all the great upcoming React 19 features thanks to this [great bento slide from Lydia Hallie’s talk](https://www.youtube.com/watch?v=AJOGzVygGcY). Note that [React 19 is in Release Candidate](https://react.dev/blog/2024/04/25/react-19) and should be out soon.
+
+---
+
+- 👀 [Rsnext](https://github.com/ScriptedAlchemy/rsnext/commits/rspack): The Rspack team is working on getting Next.js to work under their Rust bundler and shared great progress. The first alphas have been published and can be tried by [aliasing “next” to “rsnext”](https://github.com/substancelabs/rsnext/blob/main/package.json#L11). Also, [Rspack 1.0 beta 1 is out with a new “layers” feature](https://x.com/rspack_dev/status/1818490358319530221), useful for bundling your app in multiple variants and supporting React Server Components. We'll share more about this in the future, once it's ready for prime time.
+- 👀 [Enhancing SEO in Flutter Web Projects with Next.js Integration](https://gist.github.com/lcw99/ac1738cb6d5bb032085077605f56665e): Flutter users are desperate to solve the web SEO problem, after Google shared its intention to [deprecate and remove the HTML renderer](https://github.com/flutter/flutter/issues/145954). This awkward workaround is based on Next.js.
+- 🐦 [Million Lint - Get parents/children on hover, Locate render triggers](https://x.com/aidenybai/status/1816136004388176010)
+- 📊 [Stack Overflow Dev Survey - The 2024 results](https://survey.stackoverflow.co/2024/): React, Node.js, and JavaScript remain the most popular technologies.
+- 🗓️ [React Rally](https://reactrally.com/?utm_source=thisweekinreact) - 🇺🇸 Utah - 12-13, August - Last call ! You still have a chance to get your ticket, and don’t forget the [10% discount](https://ti.to/react-rally/react-rally-2024/discount/TWIR) with code "TWIR".
+- 🗓️ [Squiggle Conf](https://2024.squiggleconf.com/?utm_source=thisweekinreact) - 🇺🇸 Boston - 03 & 04 October - Get a 10% discount with code "TWIR". 1 day of conferences, 1 day of workshops, in the heart of Boston historic district, on web dev tooling !
+- 📜 [React Owner Components](https://reacttraining.com/blog/react-owner-components): Greatly explains the difference between Owner and Parent components. The owner creates the JSX and passes props to it. Client Components cannot own Server Components.
+- 📜 [Dissecting Partial Pre Rendering](https://www.nikhilsnayak.dev/blogs/dissecting-partial-pre-rendering): Illustrates how Next.js experimental PPR features takes the best of other rendering strategies with a concrete example: a static course page with dynamic reviews.
+- 📜 [Vercel - Flags as Code in Next.js](https://vercel.com/blog/flags-as-code-in-next-js): Explains how the new package `@vercel/flags/next` encodes best practices for integrating feature flags in Next.js, decoupling your code from the underlying flag provider source. Flags are always evaluated server-side, this prevents layout shifts, spinners and disclosing sensitive things to the client. I find it pretty cool that it works with static pages and PPR too: you can precompute as many static variants as there are flag permutations!
+- 📜 [Netlify - Live Preview for Gatsby is back (and better) with the new Dev Server](https://www.netlify.com/blog/gatsby-live-preview-with-new-dev-server/): Netlify has a new generic platform primitive to start your framework Dev Server in the cloud. Useful for Gatsby live previews when using compatible content (CMS) source plugins.
+- 📜 [Flexible network data preloading in large SPAs](https://mmazzarolo.com/blog/2024-07-29-data-preloading-script/): When not using a framework, you might want to inline in the HTML some data preloading logic, to speed up your app startup time by parallelizing data/bundle fetching.
+- 📜 [Creating your own store](https://www.smallrecipesfordisaster.com/posts/local-store): Shows what it takes to create your own store that you connect to React with `useSyncExternalStore`.
+- 📜 [Exploring a useState-like API with Zustand: A Fun Experiment](https://www.smallrecipesfordisaster.com/posts/dispatch-zustand): Shows how you can build on top of Zustand so that selectors return a `[state, setState]` tuple.
+- 📜 [After a Decade of React, Is Frontend a Post-React World Now?](https://thenewstack.io/after-a-decade-of-react-is-frontend-a-post-react-world-now/): There are good alternatives, but React is still growing, and I believe its growth is still accelerating (🐦 [tweet](https://x.com/sebastienlorber/status/1818233736091271285)).
+- 📜 [Battle of the Asyncs](https://www.brenelz.com/posts/battle-of-the-asyncs/): Compares React’s `use` hook with Solid’s `createAsync`, and observes the React solution looks slightly less convenient (even with RSCs).
+- 📜 [Why is Zustand a community favorite?](https://www.frontendundefined.com/posts/monthly/zustand-review/): Positive feedback for Zustand, a well-designed, lightweight state manager with selector support.
+- 📜 [Boosting performance: Faire’s transition to NextJS](https://craft.faire.com/boosting-performance-faires-transition-to-nextjs-3967f092caaf): Incremental migration from a Kotlin + React SPA to Next.js stack.
+- 📜 [Complete Guide to State Management in React](https://www.propelauth.com/post/state-management-in-react): A comprehensive guide, also covering localStorage and query parameters.
+- 📦 [Preact 10.23 - Support ref cleanup functions](https://github.com/preactjs/preact/releases/tag/10.23.0)
+- 📦 [Fumadocs 13.0 - Better Code Blocks, Callouts,](https://fumadocs.vercel.app/blog/v13)
+- 📦 [Bun 1.1.21 - Fix Remix Request/Response override issue](https://bun.sh/blog/bun-v1.1.21)
+- 📦 [Novel 0.5 - Notion-style AI-powered WYSIWYG editor](https://github.com/steven-tey/novel)
+- 🎥 [Jack Herrington - Vites Fatal Flaw Fixed With Vinxi](https://www.youtube.com/watch?v=C54k7nP4OjI)
+- 🎥 [Theo - New York Times Sees 30% Perf Win By Switching To React...18?](https://www.youtube.com/watch?v=_6kDnkeReKo)
+- 🎥 [Web Dev Simplified - Learn React Generic Components In 6 Minutes](https://www.youtube.com/watch?v=5s6dIkrv6Y4)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -46,20 +80,53 @@ import Support from "../_support.mdx";
 
 This section is authored by [Benedikt](https://twitter.com/bndkt).
 
-<Todo />
+[![New Architecture Survey](/emails/issues/194/rn.jpg)](https://docs.google.com/forms/d/e/1FAIpQLSdrwmX0MvyjEuu6Kx9fH6FufcfftFgf_rqrGASf3hEGD7mupg/viewform)
+
+📊 **[New Architecture Survey](https://docs.google.com/forms/d/e/1FAIpQLSdrwmX0MvyjEuu6Kx9fH6FufcfftFgf_rqrGASf3hEGD7mupg/viewform)**
+
+We had a lot of news about the New Architecture over the past months, including how it became the new default this year. Now, the teams at React Native and Expo have launched a survey to learn more about your adoption (or what’s keeping you from adopting it). It has 17 questions and should only take a couple of minutes, so I suggest we all help our friends at Meta and Expo out and share our New Arch experience with them. I’m sure they’ll pay us back by using the feedback for even more improvements!
+
+---
+
+- 👀 [React Native PR - React Native 0.75 will add Swift Package Manager support](https://github.com/facebook/react-native/pull/44627): Now part of RC 6
+- 👀 [Expo PR - react-native-macos support for config plugins](https://github.com/expo/expo/pull/30660)
+- 🐦 [Expo SDK 52 will have native fetch streaming with JSI](https://x.com/Baconbrix/status/1816145261170692397)
+- 🐦 [UploadThing now supports file uploads on mobile via Expo](https://x.com/t3dotgg/status/1818330724451098676)
+- 🐦 [GPU Access from React Native - First technical preview of WebGPU in React Native](https://x.com/wcandillon/status/1816758789766336624)
+- 🐦 [Expo Router FAQ - must we use index files?](https://x.com/kadikraman/status/1816583383423881650)
+- 📜 [What is Continuous Native Generation and why does it matter?](https://expo.dev/blog/what-is-continuous-native-generation) CNG is the process of generating native projects (i.e. Android and iOS project files) on demand. This article goes into the advantages of this approach and how it works.
+- 📜 [Adding React Native to an Existing Flutter App](https://www.callstack.com/blog/adding-react-native-to-an-existing-flutter-app): We all know RN works well in a brownfield approach (adding RN to native apps), but this article explores how to add RN can work in Flutter apps as well.
+- 📦 [RN 0.74.4](https://github.com/facebook/react-native/releases/tag/v0.74.4)
+- 📦 [RN 0.75.0 RC 6](https://github.com/facebook/react-native/releases/tag/v0.75.0-rc.6)
+- 📦 [React-Native-VisionOS 0.75.0-rc.1](https://github.com/callstack/react-native-visionos/releases/tag/v0.75.0-rc.1-visionos)
+- 📦 [Custom Expo Router layouts repo updated to use v3.5+](https://github.com/EvanBacon/expo-router-layouts-example/tree/main)
+- 📦 [expo-drag-drop-content-view 0.8.1 - Supports New Arch and all file types](https://github.com/AlirezaHadjar/expo-drag-drop-content-view/releases/tag/v0.8.1)
+- 🎥 [Reactiive - Checkbox Interactions - The beauty of Layout Transitions (React Native Reanimated)](https://www.youtube.com/watch?v=NPq_MFLnQrQ)
+- 🎥 [notJust.dev - AI-Powered Google Translate Clone in React Native](https://www.youtube.com/live/wIS27dSWpfo)
+- 🎙️[Rocket Ship 46 - Developing React Native TV Apps with Giovanni Laquidara](https://share.transistor.fm/s/5a9d6e44)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 👀 [Node.js - Roadmap for experimental TypeScript support](https://github.com/nodejs/loaders/issues/217): Huge, Node.js just [merged the first PR](https://github.com/nodejs/node/pull/53725) of this plan, adding a new `--experimental-strip-types` option to let TypeScript run natively on Node.js.
+- 👀 [Agenda for the 103rd meeting of Ecma TC39](https://github.com/tc39/agendas/blob/main/2024/07.md): Happening right now! Great proposals have already progressed, such as `RegExp.escape`.
+- 👀 [Drizzle Kit is now Open Source](https://github.com/drizzle-team/drizzle-orm/pull/2711)
+- 📜 [Patterns for Memory Efficient DOM Manipulation with Modern Vanilla JavaScript](https://frontendmasters.com/blog/patterns-for-memory-efficient-dom-manipulation/)
+- 📜 [Garbage collection and closures](https://jakearchibald.com/2024/garbage-collection-and-closures/)
+- 📜 [Please Stop Using Barrel Files](https://tkdodo.eu/blog/please-stop-using-barrel-files)
+- 📜 [Providing Type Definitions for CSS with @property](https://moderncss.dev/providing-type-definitions-for-css-with-at-property/)
+- 📜 [Deno - What we got wrong about HTTP imports](https://deno.com/blog/http-imports)
+- 📦 [TypeScript 5.6 Beta - Detect suspicious Truthish/Nullish checks, iterator methods…](https://devblogs.microsoft.com/typescript/announcing-typescript-5-6-beta/)
+- 📦 [Node 20.16 - Add process.getBuiltinModule(id)](https://nodejs.org/en/blog/release/v20.16.0)
+- 📦 [Babel 7.25 - Safari bugfixes and duplicated named capturing groups](https://babeljs.io/blog/2024/07/26/7.25.0)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/194/meme.jpg)](https://x.com/ken_wheeler/status/1817981694320029979)
 
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/194/meme2.jpg)](https://x.com/sebastienlorber/status/1817951368939749528)
 
 See ya! 👋
