--- a/website/newsletter/194/index.mdx
+++ b/website/newsletter/194/index.mdx
@@ -40,6 +40,7 @@ We haven’t had any huge React announcement this week, so I thought it would be
 
 ---
 
+- 💸 [Reactile – a new approach to React-based web apps. Create your own views. Let it handle your windows and widgets in a single browser tab](https://www.reactile.net/?utm_source=reactnewsletter)
 - 👀 [Rsnext](https://github.com/ScriptedAlchemy/rsnext/commits/rspack): The Rspack team is working on getting Next.js to work under their Rust bundler and shared great progress. The first alphas have been published and can be tried by [aliasing “next” to “rsnext”](https://github.com/substancelabs/rsnext/blob/main/package.json#L11). Also, [Rspack 1.0 beta 1 is out with a new “layers” feature](https://x.com/rspack_dev/status/1818490358319530221), useful for bundling your app in multiple variants and supporting React Server Components. We'll share more about this in the future, once it's ready for prime time.
 - 👀 [Enhancing SEO in Flutter Web Projects with Next.js Integration](https://gist.github.com/lcw99/ac1738cb6d5bb032085077605f56665e): Flutter users are desperate to solve the web SEO problem, after Google shared its intention to [deprecate and remove the HTML renderer](https://github.com/flutter/flutter/issues/145954). This awkward workaround is based on Next.js.
 - 🐦 [Million Lint - Get parents/children on hover, Locate render triggers](https://x.com/aidenybai/status/1816136004388176010)
@@ -88,6 +89,7 @@ We had a lot of news about the New Architecture over the past months, including 
 
 ---
 
+- 💸 [Build cross-platform apps with React Native. Combine native performance & JavaScript ease. Learn PDF viewer creation with Apryse SDK](https://apryse.com/blog/mobile/react-and-react-native-pdf-viewers?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=jul3124)
 - 👀 [React Native PR - React Native 0.75 will add Swift Package Manager support](https://github.com/facebook/react-native/pull/44627): Now part of RC 6
 - 👀 [Expo PR - react-native-macos support for config plugins](https://github.com/expo/expo/pull/30660)
 - 🐦 [Expo SDK 52 will have native fetch streaming with JSI](https://x.com/Baconbrix/status/1816145261170692397)
@@ -111,7 +113,6 @@ We had a lot of news about the New Architecture over the past months, including 
 
 - 👀 [Node.js - Roadmap for experimental TypeScript support](https://github.com/nodejs/loaders/issues/217): Huge, Node.js just [merged the first PR](https://github.com/nodejs/node/pull/53725) of this plan, adding a new `--experimental-strip-types` option to let TypeScript run natively on Node.js.
 - 👀 [Agenda for the 103rd meeting of Ecma TC39](https://github.com/tc39/agendas/blob/main/2024/07.md): Happening right now! Great proposals have already progressed, such as `RegExp.escape`.
-- 👀 [Drizzle Kit is now Open Source](https://github.com/drizzle-team/drizzle-orm/pull/2711)
 - 📜 [Patterns for Memory Efficient DOM Manipulation with Modern Vanilla JavaScript](https://frontendmasters.com/blog/patterns-for-memory-efficient-dom-manipulation/)
 - 📜 [Garbage collection and closures](https://jakearchibald.com/2024/garbage-collection-and-closures/)
 - 📜 [Please Stop Using Barrel Files](https://tkdodo.eu/blog/please-stop-using-barrel-files)
