--- a/website/newsletter/194/index.mdx
+++ b/website/newsletter/194/index.mdx
@@ -24,7 +24,13 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![React Components For AI Chat](/emails/issues/194/nlux.jpg)](https://docs.nlkit.com/nlux?utm_source=twir-jl24)
+
+**[React Components For AI Chat](https://docs.nlkit.com/nlux?utm_source=twir-jl24)**
+
+[NLUX](https://docs.nlkit.com/nlux?utm_source=twir-jl24) is a powerful open-source React library that makes it super easy to **add conversational AI capabilities to your web apps**. Create high-quality chat UIs with just a few lines of code.
+
+Check the project's [GitHub repository](https://github.com/nlkitai/nlux) to get started, or visit the [docs website](https://docs.nlkit.com/nlux?utm_source=twir-jl24) for tutorials, examples, and API reference.
 
 ---
 
@@ -73,7 +79,11 @@ We haven’t had any huge React announcement this week, so I thought it would be
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[![Build a team-based task manager with Next.js](/emails/issues/194/clerk.jpg)](https://go.clerk.com/dAmxGNo)
+
+**[Build a team-based task manager with Next.js](https://go.clerk.com/dAmxGNo)**
+
+Learn to build a multi-tenant task manager that solves team isolation, user role management, and authentication challenges.
 
 ---
 
@@ -97,7 +107,7 @@ We had a lot of news about the New Architecture over the past months, including 
 - 🐦 [GPU Access from React Native - First technical preview of WebGPU in React Native](https://x.com/wcandillon/status/1816758789766336624)
 - 🐦 [Expo Router FAQ - must we use index files?](https://x.com/kadikraman/status/1816583383423881650)
 - 📜 [What is Continuous Native Generation and why does it matter?](https://expo.dev/blog/what-is-continuous-native-generation) CNG is the process of generating native projects (i.e. Android and iOS project files) on demand. This article goes into the advantages of this approach and how it works.
-- 📜 [Adding React Native to an Existing Flutter App](https://www.callstack.com/blog/adding-react-native-to-an-existing-flutter-app): We all know RN works well in a brownfield approach (adding RN to native apps), but this article explores how to add RN can work in Flutter apps as well.
+- 📜 [Adding React Native to an Existing Flutter App](https://www.callstack.com/blog/adding-react-native-to-an-existing-flutter-app): We all know RN works well in a brownfield approach (adding RN to native apps), but this article explores how RN can work in Flutter apps as well.
 - 📦 [RN 0.74.4](https://github.com/facebook/react-native/releases/tag/v0.74.4)
 - 📦 [RN 0.75.0 RC 6](https://github.com/facebook/react-native/releases/tag/v0.75.0-rc.6)
 - 📦 [React-Native-VisionOS 0.75.0-rc.1](https://github.com/callstack/react-native-visionos/releases/tag/v0.75.0-rc.1-visionos)
