--- a/website/newsletter/194/index.mdx
+++ b/website/newsletter/194/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /194
-title: "This Week In React #194: ..."
+title: "This Week In React #194: React Conf, Rsnext, TypeScript, Next.js, PPR, Owner components, Preloading, Zustand, Flutter, Preact, Fumadocs, New Arch Survey, Expo CNG, Flutter, VisionOS, Node.js..."
 authors: [slorber]
 date: 07-31-2024
 unlisted: true
@@ -8,7 +8,15 @@ unlisted: true
 
 Hi everyone!
 
-Check our partner conf [React Africa](https://react-africa.com/?utm_source=thisweekinreact.com) (🇲🇦 Casablanca - November 29th). Get a 10% discount with code “TWIR”. It's the very first international React conf in Africa! Great speakers have already been announced.
+I don't know about you, but it's hot here! 🌞\
+Only in °C/°F, because this week has been quite cold in terms of news. 🥶\
+Many great articles, but no major React release or announcement.
+
+By chance, TypeScript saved the week, with upcoming first-class support in Node.js, and the first v5.6 beta!
+
+Check our partner conf [React Africa](https://react-africa.com/?utm_source=thisweekinreact.com) (🇲🇦 Casablanca - November 29th).\
+Get a 10% discount with code “TWIR”.\
+It's the very first international React conf in Africa! Great speakers have already been announced.
 
 <!-- truncate -->
 
@@ -115,7 +123,7 @@ We had a lot of news about the New Architecture over the past months, including 
 - 📦 [expo-drag-drop-content-view 0.8.1 - Supports New Arch and all file types](https://github.com/AlirezaHadjar/expo-drag-drop-content-view/releases/tag/v0.8.1)
 - 🎥 [Reactiive - Checkbox Interactions - The beauty of Layout Transitions (React Native Reanimated)](https://www.youtube.com/watch?v=NPq_MFLnQrQ)
 - 🎥 [notJust.dev - AI-Powered Google Translate Clone in React Native](https://www.youtube.com/live/wIS27dSWpfo)
-- 🎙️[Rocket Ship 46 - Developing React Native TV Apps with Giovanni Laquidara](https://share.transistor.fm/s/5a9d6e44)
+- 🎙️ [Rocket Ship 46 - Developing React Native TV Apps with Giovanni Laquidara](https://share.transistor.fm/s/5a9d6e44)
 
 ---
 
