--- a/website/newsletter/194/index.mdx
+++ b/website/newsletter/194/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /194
 title: "This Week In React #194: React Conf, Rsnext, TypeScript, Next.js, PPR, Owner components, Preloading, Zustand, Flutter, Preact, Fumadocs, New Arch Survey, Expo CNG, Flutter, VisionOS, Node.js..."
-authors: [slorber]
+authors: [slorber, bndkt]
 date: 07-31-2024
 ---
 
