--- a/website/newsletter/194/index.mdx
+++ b/website/newsletter/194/index.mdx
@@ -11,7 +11,7 @@ I don't know about you, but it's hot here! 🌞\
 Only in °C/°F, because this week has been quite cold in terms of news. 🥶\
 Many great articles, but no major React release or announcement.
 
-Luckily, TypeScript saved the week, with first-class support coming soon in Node.js, and the first v5.6 beta! 🎉
+TypeScript saved the week, with the first v5.6 beta, and first-class support coming in Node.js!
 
 Check our partner conf [React Africa](https://react-africa.com/?utm_source=thisweekinreact.com) (🇲🇦 Casablanca - November 29th).\
 Get a 10% discount with code “TWIR”.\
